fix xml dep